# matmul

./: CMakeLists.txt  CMakePresets.json  README.md
src/: matmul.F90  matmul_block.F90  matmul_block_loop.F90  matmul_block_v2.F90  matmul_block_v2_loop.F90  matmul_interactive.F90  matmul_loop.F90
tables/: auto_block.sh  optimal_block.sh  orig_vs_block.sh  original_auto.sh  run_block_test.sh  run_test.sh  run_typed_test.sh  viewer.py  viewer2.py  viewer2_inverse.py
